--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,12 @@
     "module": "ESNext",
     "types": ["svelte", "vite/client"],
     "noEmit": true,
+    "strict": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
