feat(infra): implement M1-06 architecture module scaffolding
- create auth/graph/db/cache/features/shared module structure with module READMEs and barrel entrypoints

- add stable path aliases in TypeScript and Vite plus root README documentation

- add alias smoke test and lint import-boundary guardrails for module layering

Acceptance criteria mapping:

1) folder structure now matches architecture plan module roots

2) import paths are stable via @module aliases and documented conventions

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,15 @@
     "target": "ES2022",
     "useDefineForClassFields": true,
     "module": "ESNext",
+    "baseUrl": ".",
+    "paths": {
+      "@auth": ["src/auth/index.ts"],
+      "@graph": ["src/graph/index.ts"],
+      "@db": ["src/db/index.ts"],
+      "@cache": ["src/cache/index.ts"],
+      "@features": ["src/features/index.ts"],
+      "@shared": ["src/shared/index.ts"]
+    },
     "types": ["svelte", "vite/client", "vite-plugin-pwa/client"],
     "noEmit": true,
     "strict": true,
