--- a/.github/workflows/deploy-channels.yml
+++ b/.github/workflows/deploy-channels.yml
@@ -7,6 +7,9 @@ on:
     types:
       - completed
 
+env:
+  VITE_AZURE_CLIENT_ID: ${{ vars.VITE_AZURE_CLIENT_ID }}
+
 permissions:
   contents: write
   actions: read
@@ -93,6 +96,13 @@ jobs:
         with:
           node-version: 22
           cache: npm
+
+      - name: Validate required runtime env
+        run: |
+          if [ -z "${VITE_AZURE_CLIENT_ID}" ]; then
+            echo "Missing repository variable VITE_AZURE_CLIENT_ID." >&2
+            exit 1
+          fi
 
       - name: Install dependencies
         run: npm ci
@@ -185,6 +195,13 @@ jobs:
         with:
           node-version: 22
           cache: npm
+
+      - name: Validate required runtime env
+        run: |
+          if [ -z "${VITE_AZURE_CLIENT_ID}" ]; then
+            echo "Missing repository variable VITE_AZURE_CLIENT_ID." >&2
+            exit 1
+          fi
 
       - name: Install dependencies
         run: npm ci
