feat(m2-02): harden subpath base/scope validation
Implements issue #15 (M2-02).

AC1/AC2: add recursive build-output root-leak checks and keep absolute refs under expected base path.

AC3/AC4/AC5: run e2e against production base path, assert manifest start_url/scope, assert SW registration scope, and assert no registration for parent route '/'.

AC6: add production+preview channel path/scope verification to Quality workflow, keep Deploy Channels behavior unchanged.

Closes #15

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -48,6 +48,22 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Build and verify production channel paths/scope
+        env:
+          DEPLOY_CHANNEL: production
+        run: |
+          npm run build
+          node scripts/verify-build-channel.mjs --dist dist --channel production --base /conspectus/webapp/
+
+      - name: Build and verify preview channel paths/scope
+        env:
+          DEPLOY_CHANNEL: preview
+          DEPLOY_PREVIEW_SLUG: quality-smoke
+          DEPLOY_PREVIEW_BASE_PREFIX: /${{ github.event.repository.name }}
+        run: |
+          npm run build
+          node scripts/verify-build-channel.mjs --dist dist --channel preview --base "/${{ github.event.repository.name }}/previews/quality-smoke/"
+
       - name: Upload unit test failure artifacts
         if: failure()
         uses: actions/upload-artifact@v4
