feat(infra): finalize M2-04 website artifact handoff integration
Closes #19

Acceptance criteria mapping:

- AC1: producer default dispatch target corrected to Jon2050/Jon2050_Webpage

- AC2: docs updated to record metadata + identity validation contract

- AC3: architecture/backlog updated with staged replacement + rollback semantics

- AC4: fail-closed behavior documented as required consumer behavior

--- a/.github/workflows/deploy-channels.yml
+++ b/.github/workflows/deploy-channels.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   VITE_AZURE_CLIENT_ID: ${{ vars.VITE_AZURE_CLIENT_ID }}
-  WEBSITE_REPO_FULL_NAME: ${{ vars.WEBSITE_REPO_FULL_NAME || 'Jon2050/conspectus' }}
+  WEBSITE_REPO_FULL_NAME: ${{ vars.WEBSITE_REPO_FULL_NAME || 'Jon2050/Jon2050_Webpage' }}
 
 permissions:
   contents: write
